# mips-py

./: flake.nix  pyproject.toml
mips/: __init__.py  assembler.py  console.py  instruction.py  machine.py  mips.py  operations.py  procedure.py  register.py  stack.py
